<resources>
    <string-array name="phrases">
        <item>Быть несчастным просто - нужно лишь иметь свободное время,
            чтобы мучить себя сомнениями, счастливы ли вы или нет.</item>
        <item>Не слепота делает человека несчастным, а не умение смирится с ней.</item>
        <item>Наша жизнь есть то, что мы о ней думаем.</item>
        <item>Не разжигай печь для врагов своих, иначе сгоришь в ней сам.</item>
    </string-array>
    <string-array name="authors">
        <item>Бернард Шоу</item>
        <item>Джон Мильтон</item>
        <item>Марк Аврелий</item>
        <item>Шекспир</item>
    </string-array>
    <string name="app_name">My Application</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="end_game">GAME OVER</string>
    <string name="new_game">New game</string>
    <string name="exit">Exit</string>
    <string name="play">Play</string>
    <string name="rules">Rules</string>
    <string name="mind_level">Mind level:</string>
    <string name="description_brain">Image brain</string>
    <string name="account">Enter your account</string>
    <string name="zero">0</string>
    <string name="account_menu">Account</string>
    <string name="sound_menu">Sound</string>
    <string name="style_menu">Style</string>
    <string name="level_menu">Level</string>
    <string name="exit_menu">Exit game</string>
    <string name="digits">абвгдеёжзийклмнопрстуфхцчшщыьэюяАБВГДЕЁЖЗИКЛМНОПРСТУФХЦЧШЩЫЬЭЮЯ
        abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="register">Register</string>
    <string name="music">Music</string>
    <string name="background_music">Background Music</string>
    <string name="click">Click</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="choose_level">Choose the level of difficulty</string>
    <string name="question">-?-</string>
    <string name="main_menu">Menu</string>
    <string name="space">" "</string>
    <string name="soundtrack">"Soundtrack"</string>
    <integer name="number">10</integer>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>