<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory app:title="@string/messages_header"
        app:icon="@drawable/ic_message">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header"
        app:icon="@drawable/ic_settings">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Notifications"
        app:icon="@drawable/ic_notifications">

        <SeekBarPreference
            android:key="volume_notifications"
            app:title="Volume"
            app:showSeekBarValue="true"
            android:defaultValue="50"/>

        <SwitchPreferenceCompat
            android:key="notifications"
            app:title="Disable notifications"
            android:summaryOn="You will no longer receive notifications"
            android:summaryOff="You will receive all notifications"/>

    </PreferenceCategory>


</PreferenceScreen>