<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="345dp"
    android:layout_height="205dp"
    android:clickable="true"
    android:focusable="true"
    >


    <Button
        android:id="@+id/btnNewGame"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/new_game"
        android:textColor="@color/pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.986" />

    <Button
        android:id="@+id/btnMenu"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/main_menu"
        android:textColor="@color/pink"
        app:layout_constraintBottom_toBottomOf="@+id/btnNewGame"
        app:layout_constraintEnd_toStartOf="@+id/btnNewGame"
        app:layout_constraintTop_toTopOf="@+id/btnNewGame"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnExitGame"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/exit"
        android:textColor="@color/pink"
        app:layout_constraintBottom_toBottomOf="@+id/btnNewGame"
        app:layout_constraintStart_toEndOf="@+id/btnNewGame"
        app:layout_constraintTop_toTopOf="@+id/btnNewGame"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:text="@string/end_game"
        android:textColor="@color/material_dynamic_neutral10"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNewGame"
        app:layout_constraintEnd_toEndOf="@+id/btnNewGame"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/btnNewGame"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>