<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_activity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:text="@string/play"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/btn_play"
        app:layout_constraintBottom_toTopOf="@+id/btnRules"
        app:layout_constraintEnd_toEndOf="@+id/btnRules"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnRules">

    </Button>

    <Button
        android:id="@+id/btnRules"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="176dp"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:text="@string/rules"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/btn_rules_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/mind_level"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayoutMain"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/constraintLayoutMain"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutMain" />

    <TextView
        android:id="@+id/tvMindLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/zero"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvCurrentAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/account"
        android:textColor="#616161"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/round_button"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/fragContMain"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/fragContMain"
        app:layout_constraintTop_toBottomOf="@+id/fragContMain"
        app:srcCompat="@drawable/ic_close_window"
        tools:ignore="SpeakableTextPresentCheck"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutMain"
        android:layout_width="409dp"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentAccount">

        <ImageView
            android:id="@+id/imBrain"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/description_brain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/brain" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/fragContMain"
        android:layout_width="345dp"
        android:layout_height="230dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentAccount">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
