<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="345dp"
    android:layout_height="205dp"
    android:background="@drawable/round_my_fragment"
    android:clickable="true"
    android:focusable="true"
    >

    <EditText
        android:id="@+id/edTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="@+id/edTextName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edTextName"
        app:layout_constraintTop_toBottomOf="@+id/edTextName" />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/edTextPassword"
        app:layout_constraintStart_toStartOf="@+id/edTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/edTextPassword" />

    <ImageButton
        android:id="@+id/imCloseWindow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="152dp"
        android:backgroundTint="@color/frag_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/edTextName"
        app:srcCompat="@drawable/ic_close_window"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Read"
        app:layout_constraintBottom_toBottomOf="@+id/btnEnter"
        app:layout_constraintEnd_toStartOf="@+id/btnEnter"
        app:layout_constraintTop_toTopOf="@+id/btnEnter"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Clear"
        app:layout_constraintBottom_toBottomOf="@+id/btnEnter"
        app:layout_constraintStart_toEndOf="@+id/btnEnter"
        app:layout_constraintTop_toTopOf="@+id/btnEnter"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>